@@ -1,3 +1,10 @@
+Tue Oct 19 06:35:31 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * ciao/Servants/Connector_Servant_Impl_Base.cpp:
+        * tests/CIF/Common/CIF_Common.h:
+        * tests/CIF/Common/CIF_Common.cpp:
+          Resolved memory leaks.
+
 Mon Oct 18 18:39:11 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * tests/DAnCE/LocalityManager/CommandlinePassage/CommandlinePassage_exec.cpp:
